--- a/style.css
+++ b/style.css
@@ -15,12 +15,20 @@
 
 @import 'node_modules/modern-normalize/modern-normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&display=swap'); /* h2 */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,703;1,703&display=swap'); /* h1 name */
 
-  /*   ----- Variables  -----  */
+
+    /*   ----- Variables  -----  */
 :root {
     --custom-color-name:;
     --custom-embellishment-name:;
     --mint: #CEF2C4;
+    --forest: #2F5923;
+    --leaf: #5F8C53;
+    --background-color: #0E2607;
+    --pastel-green: #A0BF97;
+
   }
   
   /*  ----- Viewport ----- elements inherited by all remaining elements ----- */
@@ -32,13 +40,12 @@
     background-repeat: no-repeat;
     background-size: cover;
     color:  var(--mint);
-    font-family: 'Lato', generic; /* Define with at least one font name and its related generic family name.*/
+    font-family: 'Lato', monospace; /* Define with at least one font name and its related generic family name.*/
     font-size:1.2em;
     line-height:1.15;
     margin:;
     padding:;
     max-width:;
-    
   }
   
   /*  ----- Page layout blocks -----  */
@@ -50,7 +57,10 @@
     #topic2 {}
   div {}
   aside {}
-  footer {}
+  footer {
+    background-color: var(--leaf);
+    color: var(--forest)
+  }
   
   /* ----- Anchors ----- Text links */
   a {}
@@ -60,7 +70,9 @@
   a:visited {}
   
   /*  ----- Navigation ----- Override text links for navigation only.  */
-  nav {}
+  nav {
+    background-color: var(--pastel-green);
+  }
   nav a {}
   nav a:hover {}
   
@@ -72,11 +84,15 @@
   dt {}
   dd {}
   
-  h1, h2, h3, h4, h5, h6 {
-    font-family: 'Lato', generic;
-  } 
-  h1 {}
-  h2 {}
+  h1 {
+    font-family: 'Playfair Display', monospace;
+    color: var(--forest);
+    font-size: 2.5em;
+  }
+  h2 {
+    font-family: 'Playfair Display', monospace;
+    font-size: 1.8em;
+  }
   h3 {}
   h4 {}
   h5 {}
